--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -24,6 +24,10 @@
         </tr>
     </table>
 
-    <label id="action">Waiting for user</label>
+    <div id="action">
+        <img id="loading" src="/static/images/loading.gif" style="display:none"/>
+        <img id="ok" src="/static/images/Like_Success.png" style="display:none"/>
+        <img id="fail" src="/static/images/noLike_Fail.png" style="display:none"/>
+    </div>
 </body>
 </html>
