--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,7 +17,10 @@
             201810605 --- Johan Tanta
         </div>
         <div><a href="/static/crud_users.html">Manage Users</a></div>
-         <div><a href="/static/login.html">Login</a></div>
+        <div><a href="/static/login.html">Login</a></div>
+        <!-- Nuevos indices-->
+        <div><a href="/static/chat.html">Chats</a></div>
+        <div><a href="/logout">Logout</a></div>
 
 
     </div>
